samples/_failures_safe/1761655231_2ff470_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4601ba1e.c: In function ‘main’:
./samples/SAFE/__tmp_4601ba1e.c:157:33: error: expected ‘;’ at end of input
  157 |                     print_matrix
      |                                 ^
      |                                 ;
./samples/SAFE/__tmp_4601ba1e.c:157:21: error: expected declaration or statement at end of input
  157 |                     print_matrix
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_4601ba1e.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4601ba1e.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4601ba1e.c:157:21: error: expected declaration or statement at end of input
